--- a/trunk/ExampleProjects/ServiceStack.Sakila/ServiceStack.Sakila.DataAccess/ServiceStack.Sakila.DataAccess.csproj
+++ b/trunk/ExampleProjects/ServiceStack.Sakila/ServiceStack.Sakila.DataAccess/ServiceStack.Sakila.DataAccess.csproj
@@ -60,9 +60,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="ServiceStack.Common.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ServiceStack, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\ServiceStack.Common.Core.dll</HintPath>
+      <HintPath>..\..\Lib\ServiceStack.dll</HintPath>
     </Reference>
     <Reference Include="ServiceStack.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -114,12 +114,6 @@
     <Compile Include="DataModel\Store.generated.cs" />
     <Compile Include="SakilaServiceDataAccessProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Sakila.DomainModel\Sakila.DomainModel.csproj">
-      <Project>{1630A8AD-D745-4470-8692-8F53E553E319}</Project>
-      <Name>Sakila.DomainModel</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
