--- a/trunk/ExampleProjects/ServiceStack.Sakila/ServiceStack.Sakila.ServiceInterface/ServiceStack.Sakila.ServiceInterface.csproj
+++ b/trunk/ExampleProjects/ServiceStack.Sakila/ServiceStack.Sakila.ServiceInterface/ServiceStack.Sakila.ServiceInterface.csproj
@@ -31,9 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ServiceStack.Common.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ServiceStack, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Lib\ServiceStack.Common.Core.dll</HintPath>
+      <HintPath>..\..\Lib\ServiceStack.dll</HintPath>
     </Reference>
     <Reference Include="ServiceStack.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -66,11 +66,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Sakila.DomainModel\Sakila.DomainModel.csproj">
-      <Project>{1630A8AD-D745-4470-8692-8F53E553E319}</Project>
+      <Project>{E6170756-E72D-4A0B-AF2F-9DFBE83F5C48}</Project>
       <Name>Sakila.DomainModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Sakila.ServiceModelTranslators\Sakila.ServiceModelTranslators.csproj">
-      <Project>{1C891109-F7ED-43B5-9463-8090A4620377}</Project>
+      <Project>{0A8965C3-5554-4BB1-B276-FA04A10C407F}</Project>
       <Name>Sakila.ServiceModelTranslators</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Sakila.ServiceModel\Sakila.ServiceModel.csproj">
