--- a/ExampleProjects/ServiceStack.Sakila/ServiceStack.UsageExamples/app.config
+++ b/ExampleProjects/ServiceStack.Sakila/ServiceStack.UsageExamples/app.config
@@ -31,20 +31,6 @@
                         <message clientCredentialType="UserName" algorithmSuite="Default" />
                     </security>
                 </binding>
-                <binding name="WSHttpBinding_IOneWay" closeTimeout="00:01:00"
-                    openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
-                    allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-                    maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
-                    useDefaultWebProxy="true">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-                    <security mode="None">
-                        <transport clientCredentialType="None" proxyCredentialType="None"
-                            realm="" />
-                        <message clientCredentialType="UserName" algorithmSuite="Default" />
-                    </security>
-                </binding>
             </basicHttpBinding>
             <customBinding>
                 <binding name="WSHttpBinding_ISyncReply">
@@ -60,20 +46,33 @@
                         realm="" transferMode="Buffered" unsafeConnectionNtlmAuthentication="false"
                         useDefaultWebProxy="true" />
                 </binding>
+                <binding name="WSHttpBinding_IOneWay">
+                    <textMessageEncoding maxReadPoolSize="64" maxWritePoolSize="16"
+                        messageVersion="Soap12" writeEncoding="utf-8">
+                        <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    </textMessageEncoding>
+                    <httpTransport manualAddressing="false" maxBufferPoolSize="524288"
+                        maxReceivedMessageSize="65536" allowCookies="false" authenticationScheme="Anonymous"
+                        bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+                        keepAliveEnabled="true" maxBufferSize="65536" proxyAuthenticationScheme="Anonymous"
+                        realm="" transferMode="Buffered" unsafeConnectionNtlmAuthentication="false"
+                        useDefaultWebProxy="true" />
+                </binding>
             </customBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost/ServiceStack.Sakila.Host.WebService/Endpoints/Soap11/AsyncOneWay.svc"
+            <endpoint address="http://localhost/ServiceStack.Sakila.Host.WebService/Endpoints/Soap11/SyncReply.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISyncReply"
                 contract="BasicHttpClientProxy.ISyncReply" name="BasicHttpBinding_ISyncReply" />
-            <endpoint address="http://localhost/ServiceStack.Sakila.Host.WebService/Endpoints/Soap11/SyncReply.svc"
+            <endpoint address="http://localhost/ServiceStack.Sakila.Host.WebService/Endpoints/Soap11/AsyncOneWay.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOneWay"
                 contract="BasicHttpClientProxy.IOneWay" name="BasicHttpBinding_IOneWay" />
-            <endpoint address="http://localhost/ServiceStack.Sakila.Host.WebService/Endpoints/Soap12/AsyncOneWay.svc"
+            <endpoint address="http://localhost/ServiceStack.Sakila.Host.WebService/Endpoints/Soap12/SyncReply.svc"
                 binding="customBinding" bindingConfiguration="WSHttpBinding_ISyncReply"
                 contract="WsHttpClientProxy.ISyncReply" name="WSHttpBinding_ISyncReply" />
-            <endpoint address="http://localhost/ServiceStack.Sakila.Host.WebService/Endpoints/Soap12/SyncReply.svc"
-                binding="basicHttpBinding" bindingConfiguration="WSHttpBinding_IOneWay"
+            <endpoint address="http://localhost/ServiceStack.Sakila.Host.WebService/Endpoints/Soap12/AsyncOneWay.svc"
+                binding="customBinding" bindingConfiguration="WSHttpBinding_IOneWay"
                 contract="WsHttpClientProxy.IOneWay" name="WSHttpBinding_IOneWay" />
         </client>
     </system.serviceModel>
