--- a/Common/ServiceStack.Common/ServiceStack.CacheAccess.Memcached/ServiceStack.CacheAccess.Memcached.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.CacheAccess.Memcached/ServiceStack.CacheAccess.Memcached.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MemoryCacheClient.cs" />
     <Compile Include="ServiceStackMemcachedClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
