--- a/Common/ServiceStack.Common/ServiceStack.ServiceInterface/ServiceStack.ServiceInterface.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.ServiceInterface/ServiceStack.ServiceInterface.csproj
@@ -39,6 +39,10 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -49,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppContext.cs" />
+    <Compile Include="OperationContext.cs" />
     <Compile Include="BaseServiceResolver.cs" />
     <Compile Include="CallContext.cs" />
     <Compile Include="Session\UserClientSession.cs" />
