--- a/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints/ServiceStack.WebHost.Endpoints.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.WebHost.Endpoints/ServiceStack.WebHost.Endpoints.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -53,28 +56,49 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Endpoints\BaseIndexMetadataHandler.cs" />
-    <Compile Include="Endpoints\BaseSoap11MetadataHandler.cs" />
-    <Compile Include="Endpoints\BaseSoap12MetadataHandler.cs" />
-    <Compile Include="Endpoints\BaseSoapMetadataHandler.cs" />
-    <Compile Include="Endpoints\BaseJsonMetadataHandler.cs" />
-    <Compile Include="Endpoints\BaseMetadataHandler.cs" />
-    <Compile Include="Endpoints\BaseWsdlPage.cs">
+    <Compile Include="Metadata\Soap12WsdlMetadataHandler.cs" />
+    <Compile Include="Support\HttpHandlerBase.cs" />
+    <Compile Include="Support\Metadata\WsdlMetadataHandlerBase.cs" />
+    <Compile Include="Support\Templates\Soap12WsdlTemplate.cs" />
+    <Compile Include="Metadata\Soap11WsdlMetadataHandler.cs" />
+    <Compile Include="Support\Templates\Soap11WsdlTemplate.cs" />
+    <Compile Include="Support\Templates\WsdlTemplateBase.cs" />
+    <Compile Include="Soap12AsyncOneWayHandler.cs" />
+    <Compile Include="Soap12SyncReplyHandler.cs" />
+    <Compile Include="JsonAsyncOneWayHandler.cs" />
+    <Compile Include="JsonSyncReplyHandler.cs" />
+    <Compile Include="Soap11AsyncOneWayHandler.cs" />
+    <Compile Include="Support\JsonHandlerBase.cs" />
+    <Compile Include="Support\EndpointHandlerBase.cs" />
+    <Compile Include="Soap11SyncReplyHandler.cs" />
+    <Compile Include="EndpointHost.cs" />
+    <Compile Include="EndpointHostConfig.cs" />
+    <Compile Include="Support\SoapAsyncOneWayHandler.cs" />
+    <Compile Include="Support\SoapSyncReplyHandler.cs" />
+    <Compile Include="XmlAsyncOneWayHandler.cs" />
+    <Compile Include="Support\XmlHandlerBase.cs" />
+    <Compile Include="XmlSyncReplyHandler.cs" />
+    <Compile Include="Metadata\IndexMetadataHandler.cs" />
+    <Compile Include="Metadata\Soap11MetadataHandler.cs" />
+    <Compile Include="Metadata\Soap12MetadataHandler.cs" />
+    <Compile Include="Metadata\BaseSoapMetadataHandler.cs" />
+    <Compile Include="Metadata\JsonMetadataHandler.cs" />
+    <Compile Include="Metadata\BaseMetadataHandler.cs" />
+    <Compile Include="Metadata\BaseWsdlPage.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Endpoints\BaseXmlMetadataHandler.cs" />
-    <Compile Include="Endpoints\XsdGenerator.cs" />
+    <Compile Include="Metadata\XmlMetadataHandler.cs" />
+    <Compile Include="Metadata\XsdGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Endpoints\Operations.cs" />
-    <Compile Include="Endpoints\ServiceOperations.cs" />
-    <Compile Include="Support\Endpoints\Controls\Soap12OperationControl.cs" />
-    <Compile Include="Support\Endpoints\Controls\OperationControl.cs" />
-    <Compile Include="Support\Endpoints\Controls\OperationsControl.cs" />
-    <Compile Include="Support\Endpoints\OperationVerbs.cs" />
-    <Compile Include="Support\Endpoints\Controls\Soap11OperationControl.cs" />
-    <Compile Include="Support\Endpoints\Controls\IndexOperationsControl.cs" />
-    <Compile Include="Support\Endpoints\XsdTypeNames.cs" />
-    <Compile Include="Support\Endpoints\XsdTypes.cs" />
+    <Compile Include="Metadata\Operations.cs" />
+    <Compile Include="Metadata\ServiceOperations.cs" />
+    <Compile Include="Support\Metadata\Controls\Soap12OperationControl.cs" />
+    <Compile Include="Support\Metadata\Controls\OperationControl.cs" />
+    <Compile Include="Support\Metadata\Controls\OperationsControl.cs" />
+    <Compile Include="Support\Metadata\Controls\Soap11OperationControl.cs" />
+    <Compile Include="Support\Metadata\Controls\IndexOperationsControl.cs" />
+    <Compile Include="Support\Metadata\XsdTypeNames.cs" />
+    <Compile Include="Support\Metadata\XsdTypes.cs" />
     <Compile Include="Utils\XsdUtils.cs" />
     <Compile Include="Support\Templates\ListTemplate.cs" />
   </ItemGroup>
@@ -82,6 +106,10 @@
     <ProjectReference Include="..\ServiceStack.Common\ServiceStack.Common.csproj">
       <Project>{982416DB-C143-4028-A0C3-CF41892D18D3}</Project>
       <Name>ServiceStack.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ServiceStack.ServiceClient.Web\ServiceStack.ServiceClient.Web.csproj">
+      <Project>{D7C0239C-8885-43F9-B1A6-2C0FC6572B10}</Project>
+      <Name>ServiceStack.ServiceClient.Web</Name>
     </ProjectReference>
     <ProjectReference Include="..\ServiceStack.ServiceModel\ServiceStack.ServiceModel.csproj">
       <Project>{5B5C5AD6-6A6D-42C3-9C02-AC7FEBBCDFA8}</Project>
