--- a/Tools/replace-all/replace-all.properties
+++ b/Tools/replace-all/replace-all.properties
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <properties>
-	<property name="in.replaceText" value="Ddn"/>
-	<property name="out.replaceText" value="ServiceStack"/>
+	<property name="in.replaceText" value="ServiceStack"/>
+	<property name="out.replaceText" value="Your"/>
 
-	<property name="import.dir" value="C:\Projects\Ddn\src\trunk\webservices\src\Common"/>
+	<property name="import.dir" value="C:\Projects\code.google\Common\ServiceStack.Interfaces"/>
 	<property name="deploy.dir" value="out"/>
 </properties>
